# cargo-msfs

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  action.yml
.github/workflows/: release.yml  test.yml
src/: main.rs  sdk.rs
